--- a/css/link.css
+++ b/css/link.css
@@ -59,6 +59,8 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .footer_menu:last-child:after { display: none; }
 
 .team_title { display: inline-block; color: #092058; font-size: 1.4rem; font-weight: 700; padding-bottom: 10px; }
+.team_title.title_link_icon:hover { color: #2f31e5; }
+.team_title.title_link_icon:before { content: '\f0c1'; font-family: 'icon'; font-size: 1.2rem; margin-right: 10px; line-height: 27px; color: #858ea6; }
 
 .no_event { color: #a5a5a5; pointer-events: none; cursor: default; }
 
