--- a/scss/index.scss
+++ b/scss/index.scss
@@ -34,7 +34,7 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
   background-image: url('../img/w_bg.png');
   background-repeat: no-repeat;
   background-attachment:fixed;
-  background-position: 0 0; 
+  background-position: -70px 0; 
   background-size: contain;
 
   @include range-width(450px, 1400px) {
@@ -184,7 +184,7 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
             @include clearfix();
             
             color: $deep_blue;
-            font-size: 1rem;
+            font-size: .9rem;
             font-weight: 400;
 
             &:hover, &:active {
@@ -227,7 +227,7 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
               background-color: white;
               @include border-radius(30px);
               color: $bright_blue;
-              font-size: 1rem;
+              font-size: .9rem;
               font-weight: 500;
               line-height: 37px;
 
