--- a/css/public.css
+++ b/css/public.css
@@ -25,7 +25,7 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .page_boxs .page_box header nav .nav_boxs > span:hover > div > a { display: block; width: 100%; height: 50px; line-height: 50px; font-size: .9rem; float: none; text-align: left; color: #092058; text-decoration: none; border-bottom: 1px solid rgba(165, 165, 165, 0.5); text-align: center; -moz-transition: background-color 0.3s; -o-transition: background-color 0.3s; -webkit-transition: background-color 0.3s; transition: background-color 0.3s; }
 .page_boxs .page_box header nav .nav_boxs > span:hover > div > a:last-child { border-bottom: 0; }
 .page_boxs .page_box header nav .nav_boxs > span:hover > div > a:hover { color: #2f31e5; }
-.page_boxs .page_box header nav .nav_boxs > span, .page_boxs .page_box header nav .nav_boxs > a { display: inline-block; cursor: pointer; height: 37px; line-height: 37px; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; color: #092058; font-size: 1rem; font-weight: 400; }
+.page_boxs .page_box header nav .nav_boxs > span, .page_boxs .page_box header nav .nav_boxs > a { display: inline-block; cursor: pointer; height: 37px; line-height: 37px; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; color: #092058; font-size: .9rem; font-weight: 400; }
 .page_boxs .page_box header nav .nav_boxs > span:after, .page_boxs .page_box header nav .nav_boxs > a:after { display: table; content: ""; line-height: 0; clear: both; }
 .page_boxs .page_box header nav .nav_boxs > span:hover, .page_boxs .page_box header nav .nav_boxs > span:active, .page_boxs .page_box header nav .nav_boxs > a:hover, .page_boxs .page_box header nav .nav_boxs > a:active { color: #2f31e5; text-decoration: underline; }
 .page_boxs .page_box header nav .nav_boxs > span:last-child:after, .page_boxs .page_box header nav .nav_boxs > a:last-child:after { display: none; }
@@ -33,7 +33,7 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .page_boxs .page_box header nav .nav_boxs > span.web_ac, .page_boxs .page_box header nav .nav_boxs > a.web_ac { color: #2f31e5; text-decoration: underline; }
 .page_boxs .page_box header nav .nav_boxs > span.web_no, .page_boxs .page_box header nav .nav_boxs > a.web_no { color: #a5a5a5; pointer-events: none; cursor: default; }
 .page_boxs .page_box header nav .nav_boxs > span.web_no:after, .page_boxs .page_box header nav .nav_boxs > a.web_no:after { display: inline-block; content: '・'; color: #092058; }
-.page_boxs .page_box header nav .nav_boxs > span.link_login2, .page_boxs .page_box header nav .nav_boxs > a.link_login2 { padding: 0 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: 1rem; font-weight: 500; line-height: 37px; }
+.page_boxs .page_box header nav .nav_boxs > span.link_login2, .page_boxs .page_box header nav .nav_boxs > a.link_login2 { padding: 0 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: .9rem; font-weight: 500; line-height: 37px; }
 .page_boxs .page_box header nav .nav_boxs > span.link_login2:hover, .page_boxs .page_box header nav .nav_boxs > a.link_login2:hover { background-color: #2f31e5; color: white; text-decoration: none; }
 .page_boxs .page_box header nav .nav_boxs > span.link_login2:after, .page_boxs .page_box header nav .nav_boxs > a.link_login2:after { display: none; }
 .page_boxs .page_box header .m_Hamburg { display: none; }
@@ -41,6 +41,7 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); padding: 35px 0; *zoom: 1; }
 .page_boxs .page_box main .cent_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
 .page_boxs .page_box main .cent_boxs.cent_web { display: inline-block; margin-bottom: 20px; padding: 20px 0; }
+.page_boxs .page_box main .cent_boxs.cent_bottom_box { position: relative; }
 .page_boxs .page_box main .cent_boxs.cent_mobile { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box main .cent_boxs.cent_mobile { display: inline-block; margin-bottom: 20px; padding: 20px 0; } }
 .page_boxs .page_box footer { *zoom: 1; margin: 20px 0; text-align: left; }
@@ -53,7 +54,7 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .menu_boxs.hovermenu { display: inline-block; left: 0; }
 .menu_boxs.goback { left: 0; }
 .menu_boxs .icon-x { display: inline-block; width: 30px; height: 30px; font-size: 1.6rem; line-height: 30px; color: #2d4488; font-weight: 600; float: right; margin-top: 2px; }
-.menu_boxs .lastMenu, .menu_boxs .threeMenu { display: inline-block; width: 100%; padding: 20px 20px; border-top: 1px solid rgba(165, 165, 165, 0.5); text-align: center; font-size: 1.2rem; color: #092058; text-decoration: none; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; font-weight: 600; }
+.menu_boxs .lastMenu, .menu_boxs .threeMenu { display: inline-block; width: 100%; padding: 20px 20px; border-top: 1px solid rgba(165, 165, 165, 0.5); text-align: center; font-size: 1rem; color: #092058; text-decoration: none; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; font-weight: 600; }
 .menu_boxs .lastMenu:first-child, .menu_boxs .threeMenu:first-child { padding: 0 10px; }
 .menu_boxs .lastMenu:nth-child(8), .menu_boxs .threeMenu:nth-child(8) { border-bottom: 1px solid rgba(165, 165, 165, 0.5); }
 .menu_boxs .lastMenu.otherMenu, .menu_boxs .threeMenu.otherMenu { padding-left: 30px; border-bottom: 1px dotted white; }
@@ -70,13 +71,13 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .modal .modal_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
 @media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs { max-width: auto; padding: 20px 20px; margin-bottom: 30px; } }
 .modal .modal_boxs .close { font-size: 2rem; font-weight: bold; cursor: pointer; color: #092058; float: right; }
-.modal .modal_boxs .lightbox_done { display: inline-block; font-size: 1.2rem; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; background-color: #092058; color: white; padding: 8px 15px; float: right; cursor: pointer; }
+.modal .modal_boxs .lightbox_done { display: inline-block; font-size: .9rem; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; background-color: #092058; color: white; padding: 0 15px; line-height: 35px; float: right; cursor: pointer; }
 @media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs .lightbox_done { font-size: 1rem; } }
 .modal .modal_boxs .modal_box { display: inline-block; width: 100%; margin-top: 30px; *zoom: 1; }
 .modal .modal_boxs .modal_box:after { display: table; content: ""; line-height: 0; clear: both; }
 .modal .modal_boxs .modal_box .check_social { display: inline-block; width: calc(100% / 6); float: left; margin-bottom: 30px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs .modal_box .check_social { width: calc(100% / 3); } }
-.modal .modal_boxs .modal_box input[type="checkbox"] { display: inline-block; width: 100px; height: 100px; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px; outline: 0; border: 0; -webkit-appearance: none; vertical-align: middle; margin-top: 0; padding: 5px 10px; background: #858ea6; color: white; font-size: 3rem; text-align: center; line-height: 90px; }
+.modal .modal_boxs .modal_box input[type="checkbox"] { display: inline-block; width: 90px; height: 90px; -moz-border-radius: 50px; -webkit-border-radius: 50px; border-radius: 50px; outline: 0; border: 0; -webkit-appearance: none; vertical-align: middle; margin-top: 0; padding: 5px 10px; background: #858ea6; color: white; font-size: 2.4rem; text-align: center; line-height: 80px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .modal .modal_boxs .modal_box input[type="checkbox"] { width: 80px; height: 80px; line-height: 70px; font-size: 2.6rem; } }
 .modal .modal_boxs .modal_box input[type="checkbox"]:checked { background: #092058; }
 .modal .modal_boxs .modal_box input[type="checkbox"]:checked:after { content: ''; top: 50%; left: 50%; position: absolute; background: transparent; border-top: none; border-right: none; }
