--- a/css/type.css
+++ b/css/type.css
@@ -15,7 +15,7 @@ h3 { font-size: 1.3rem; font-weight: 300; text-shadow: 2px 2px 4px rgba(0, 0, 0,
 
 p { display: inline-block; padding: 0; margin: 0; }
 
-.icon-chain { transform: rotateY(180deg); }
+.icon-chain { transform: rotateY(180deg); line-height: 43px !important; padding-left: 10px; }
 
 .footer_type { color: #092058; font-size: .9rem; font-weight: 300; }
 
@@ -24,21 +24,23 @@ p { display: inline-block; padding: 0; margin: 0; }
 
 .lineHeight45 { line-height: 45px; }
 
-.team_type { display: inline-block; width: 100%; color: #092058; font-size: 1rem; font-weight: 400; }
-@media screen and (max-width: 449px) and (min-width: 0) { .team_type { font-size: 1rem; } }
+.team_type { display: inline-block; width: 100%; color: #092058; font-size: .9rem; font-weight: 400; }
+@media screen and (max-width: 449px) and (min-width: 0) { .team_type { font-size: .9rem; } }
 .team_type.team_gray { color: #a5a5a5; }
 
-.link_title { display: inline-block; color: #092058; font-size: 1.2rem; font-weight: 700; padding-bottom: 5px; }
+.link_title { display: inline-block; color: #092058; font-size: 1rem; font-weight: 700; padding-bottom: 5px; }
 .link_title.link_title_gray { color: rgba(165, 165, 165, 0.5); }
 .link_title.link100 { width: 100%; }
 
-.bright_type13 { color: #2f31e5; font-size: 1.2rem; font-weight: 500; }
+.bright_type13 { color: #2f31e5; font-size: 1rem; font-weight: 500; }
 
 .type_uppercase { text-transform: uppercase; }
 
-.type_data_title { font-size: 1.4rem; font-weight: 700; color: #2f31e5; }
+.type_data_title { font-size: 1.2rem; font-weight: 700; color: #2f31e5; }
 .type_data_title.type_data_gray { color: rgba(165, 165, 165, 0.5); }
 .type_data_title.type_data_thin { font-weight: 400; }
+
+.type_13 { display: inline-block; width: 100%; color: #a5a5a5; font-size: .9rem; padding-bottom: 10px; }
 
 .big_blue_type { font-size: 2.8rem; font-weight: 700; color: #092058; }
 
@@ -46,20 +48,22 @@ p { display: inline-block; padding: 0; margin: 0; }
 
 input { outline: 0; background-color: transparent; }
 
-.toEnter { display: inline-block; width: 100%; padding: 8px 15px; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
-.toEnter.networklink { font-size: 1rem; padding: 12px 0 0 10px; width: calc(100% - 50px); }
+.toEnter { display: inline-block; width: 100%; padding: 0 15px; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; line-height: 40px; font-size: .9rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
+.toEnter.networklink { font-size: .9rem; padding-left: 20px; width: calc(100% - 50px); }
 @media screen and (max-width: 449px) and (min-width: 0) { .toEnter.networklink { width: calc(100% - 45px); } }
 .toEnter.on_net01 { border: 0; }
 
-.inEnter { display: inline-block; width: calc(100% - 50px * 2); padding: 8px 15px 8px 0; border: 0; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
+.inEnter { display: inline-block; width: calc(100% - 50px * 2); border: 0; line-height: 40px; font-size: .9rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
+.inEnter.in_LH42 { line-height: 42px !important; }
+@media screen and (max-width: 449px) and (min-width: 0) { .inEnter.in_LH42 { line-height: 28px !important; } }
 .inEnter.in_all { width: calc(100% - 70px); padding: 0; line-height: 40px; }
-@media screen and (max-width: 449px) and (min-width: 0) { .inEnter { font-size: 1rem; line-height: 25px; padding: 7px 0; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .inEnter { font-size: .9rem; line-height: 25px; padding: 7px 0; } }
 
 .addEnter { color: #a5a5a5; font-weight: 400; }
 .addEnter.enter_hid { width: calc(100% - 8px); display: -webkit-box; -webkit-box-orient: vertical; -webkit-line-clamp: 1; overflow: hidden; text-overflow: ellipsis; }
 .addEnter.addEnter2 { color: rgba(165, 165, 165, 0.5); pointer-events: none; cursor: default; }
 
-.text_box { display: inline-block; width: 100%; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; border: 1px solid #092058; padding: 10px 15px; font-size: 1.2rem; font-family: 'Roboto'; color: #092058; outline: 0; overflow: auto; resize: none; }
+.text_box { display: inline-block; width: 100%; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; border: 1px solid #092058; padding: 10px 15px; font-size: 1rem; font-family: 'Roboto'; color: #092058; outline: 0; overflow: auto; resize: none; }
 .text_box.text_box_gray { border: 1px solid rgba(165, 165, 165, 0.5); color: #a5a5a5; }
 
 .input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; *zoom: 1; position: relative; }
@@ -71,11 +75,15 @@ input { outline: 0; background-color: transparent; }
 @media screen and (max-width: 449px) and (min-width: 0) { .input_box.input_search90 { float: left; } }
 .input_box .tip_box { display: inline-block; position: absolute; top: 0; left: 0; width: 40px; height: 40px; }
 
-.social_box { display: inline-block; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 9px; color: white; font-size: 1.2rem; }
+.social_box { display: inline-block; width: 42px; height: 42px; -moz-border-radius: 25px; -webkit-border-radius: 25px; border-radius: 25px; line-height: 42px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 9px; color: white; font-size: 1.2rem; }
 .social_box.social_box2 { background-color: #2f31e5; border: 1px solid #2f31e5; }
 .social_box.member_box { background-color: #858ea6; border: 1px solid #858ea6; }
 .social_box.serch_box { background-color: transparent; border: 0; color: #2f31e5; }
 .social_box.team_box { color: #ff9800; }
+
+.icon-Address-Card---FontAwesomeCopy-3 { font-size: 1rem !important; padding-right: 10px; }
+
+.icon-save { font-size: 1rem !important; }
 
 .borderGray_TD { border-top: 1px dotted rgba(165, 165, 165, 0.5); border-bottom: 1px dotted rgba(165, 165, 165, 0.5); margin: 20px 0; }
 
